Spacing Fixes

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html,
 body {
   margin: 0;
   padding: 0;
+  font-size: 1.125rem;
 
   --primary: hsl(160deg, 100%, 30%);
   --secondary-light: hsl(45deg, 100%, 50%);
@@ -20,15 +21,22 @@ body {
   --white: hsl(0deg, 0%, 100%);
 }
 
+h1,
+h2,
+p {
+  margin: 0;
+}
+
 /* Add styles here! */
 .max-width-wrapper {
-  max-width: 450px;
+  max-width: 600px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .intro-chunk {
   padding: 16px;
+  padding-bottom: 32px;
   max-width: 340px;
   font-size: 1.25rem;
 }
@@ -36,7 +44,7 @@ body {
 .title {
   font-size: 2rem;
   color: var(--black);
-  margin-top: 64px;
+  margin-top: 96px;
   margin-bottom: 32px;
 }
 
@@ -44,7 +52,7 @@ strong {
   color: var(--primary);
 }
 p {
-  margin: 16px 0;
+  margin: 24px 0;
 }
 main {
   background-color: var(--light);
@@ -64,4 +72,5 @@ main {
   padding: 24px 32px;
   margin-left: -32px;
   margin-top: 0;
+  width: max-content;
 }
